Follow US Copyright Office recommendations.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -407,7 +407,7 @@ Wolfgang Corcoran-Mathe, for an in-depth review.
 
 
 <h2>Copyright</h2>
-Copyright &copy; Vladimir Nikishkin (2020).
+&copy; 2020 Vladimir Nikishkin.
 
 <p>
   Permission is hereby granted, free of charge, to any person
