Link to SRFI 96.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -80,7 +80,9 @@ reused.</p>
 
 <!-- added after an email by John Cowan -->
 <p>
-This SRFI can be compared to SRFI 96, which is to SLIB as this SRFI
+This SRFI can be compared to
+<a href="https://srfi.schemers.org/srfi-96/srfi-96.html">SRFI 96</a>,
+which is to SLIB as this SRFI
 is to the SICP drawing language. SRFI 96 makes no attempt to document
 SLIB (which has over 200 modules), much less to extend it.
 Instead, it documents the constants, variables, procedures, and
