Credit Julie Sussman.

--- a/srfi-203.html
+++ b/srfi-203.html
@@ -46,8 +46,8 @@ bear an exclamation mark, either.</li>
 
 <h2>Rationale</h2>
 
-<p><cite>Structure and Interpretation of Computer Programs</cite> (SICP)
-by Harold Abelson and Gerald Jay Sussman is one of the
+<p><cite>Structure and Interpretation of Computer Programs</cite> (SICP),
+by Harold Abelson and Gerald Jay Sussman with Julie Sussman, is one of the
 world's most famous programming textbooks. The code examples in the book are
 given in Scheme, and the exercises are mostly expected to be done in Scheme.
 The examples and exercises are best executed with a Scheme system
