--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>SRFI 203: A Simple Picture Language in the Style of SICP</h1>
     <p class="authors">by Vladimir Nikishkin</p>
     <p class="based-on"></p>
-    <p class="status">status: <em>draft</em> (2020-06-25)</p>
+    <p class="status">status: <em>final</em> (2020-09-17)</p>
     <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=miscellaneous">Miscellaneous</a></p>
 
     <ul class="info">
