Add keyword "SICP".

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="authors">by Vladimir Nikishkin</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2020-09-17)</p>
-    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=miscellaneous">Miscellaneous</a></p>
+    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=sicp">SICP</a></p><span class="see-also">See also <a href="/srfi-216/">SRFI 216: SICP Prerequisites (Portable)</a>.</span>
 
     <ul class="info">
       <li><a href="srfi-203.html">The SRFI Document</a></li>
